# docs

./: .gitignore  .reference-sync  LICENSE  README.md  mirrors.json
.github/: mirrors.schema.json  requirements.txt
.github/scripts/: sync.py  sync_mirrors.py
.github/workflows/: sync-context-search.yml  sync-mirrors.yml  sync.yml
Factory-AI/factory/: .mirror-meta.json  README.md  convert_md_to_mdx.sh  docs.json  factory-docs-map.mdx  models.mdx  pricing.mdx  style.css
Factory-AI/factory/benchmarks/: agent-arena.mdx  legacy-bench.mdx  nextjs-eval.mdx  review-benchmark.mdx  terminal-bench.mdx
Factory-AI/factory/changelog/: 1-10.mdx  1-8.mdx  1-9.mdx  cli-updates.mdx  release-notes.mdx
Factory-AI/factory/cli/account/: droid-shield.mdx  security.mdx
Factory-AI/factory/cli/byok/: baseten.mdx  deepinfra.mdx  fireworks.mdx  google-gemini.mdx  groq.mdx  huggingface.mdx  lm-studio.mdx  ollama.mdx  openai-anthropic.mdx  openrouter.mdx  overview.mdx
Factory-AI/factory/enterprise/: audit-log.mdx  compliance-audit-and-monitoring.mdx  enterprise-plugin-registry.mdx  eu-deployment.mdx  github-integration-security.mdx  hierarchical-settings-and-org-control.mdx  identity-and-access.mdx  identity-sso-and-scim.mdx  index.mdx  llm-safety-and-agent-controls.mdx  models-llm-gateways-and-integrations.mdx  network-and-deployment.mdx  privacy-and-data-flows.mdx  security-review.mdx  service-accounts.mdx  telemetry-export.mdx  usage-cost-and-analytics.mdx
Factory-AI/factory/integrations/: github-app.mdx  ide-integrations.mdx  jetbrains.mdx  linear.mdx  slack.mdx  zed.mdx
Factory-AI/factory/jp/: models.mdx  pricing.mdx  support.mdx
Factory-AI/factory/onboarding/: index.mdx
Factory-AI/factory/reference/: analytics-api.mdx  cli-reference.mdx  hooks-reference.mdx  maturity-level-reports-api.mdx  readiness-reports-api.mdx
Factory-AI/factory/web/: auto-model-routing-alloy.mdx  automations.mdx  factory-router.mdx  missions.mdx  software-factory.mdx
Factory-AI/factory/welcome/: index.mdx
MoonshotAI/kimi-cli/: .mirror-meta.json
MoonshotAI/kimi-cli/chat_provider/: __init__.py  chaos.py  kimi.py
MoonshotAI/kosong/: .mirror-meta.json
anthropics/claude-agent-sdk-python/: .mirror-meta.json
browser-use/browser-use/: .mirror-meta.json
browser-use/workflow-use/: .mirror-meta.json  cli.py  pyproject.toml
browser-use/workflow-use/examples/scripts/: generate_workflow.py
browser-use/workflow-use/examples/workflows/basic/: example.workflow.yaml  pure_semantic.workflow.yaml
browser-use/workflow-use/examples/workflows/form_filling/: semantic_form_fill.workflow.yaml
browser-use/workflow-use/tests/: test_go_back.workflow.yaml  test_selector_generator.py
browser-use/workflow-use/workflow_use/healing/: service.py  xpath_optimizer.py
browser-use/workflow-use/workflow_use/mcp/: service.py
browser-use/workflow-use/workflow_use/schema/: views.py
browserbase/sdk-python/: .mirror-meta.json
context/: blog.google_technology_developers_file-search-gemini-api_.2025-11-09T18_07_43.675Z.md
curator/: .env.example  .gitignore  README.md  package-lock.json  package.json
curator/scripts/: build.sh  install.sh
curator/src/: index.ts
curator/src/commands/: clean.ts  config.ts  curate.ts  list.ts
curator/src/core/: api.ts  cache.ts  config.ts  file-utils.ts
curator/src/ui/: prompts.ts
ericbuess/claude-code-docs/: .mirror-meta.json
lastmile-ai/mcp-agent/: .mirror-meta.json
metatool-ai/metamcp/: .mirror-meta.json
modelcontextprotocol/go-sdk/: .mirror-meta.json
modelcontextprotocol/modelcontextprotocol/: .mirror-meta.json
modelcontextprotocol/python-sdk/: .mirror-meta.json
openai/codex/: .mirror-meta.json
python-trio/trio/: .mirror-meta.json
raycast/extensions/: .config.json  .mirror-meta.json
raycast/extensions/basics/: prepare-an-extension-for-store.md
router-for-me/CLIProxyAPIDocs/: .mirror-meta.json
scripts/: sync_mirrors.py
search-tool/: .gitignore  README.md  package-lock.json  package.json
search-tool/src/: index.ts
stanfordnlp/dspy/: .mirror-meta.json
typst/typst/: .mirror-meta.json
unstructured/: CONTEXT_SEARCH_MCP_SPEC.md  ai.google.dev_gemini-api_docs_file-search.2025-11-09T18_08_25.315Z.md  nodejs.org_api_single-executable-applications.html.2025-11-09T19_17_34.546Z.md
vadimdemedes/ink/: .mirror-meta.json
(+330 files in other folders)
