[project]
name = "workflow-use"
version = "0.2.11"
authors = [{ name = "Gregor Zunic" }]
description = "Create, edit, run deterministic workflows"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved",
    "Operating System :: OS Independent",
]

dependencies = [
    "aiofiles==24.1.0",
    "browser-use==0.9.5",
    "fastapi==0.115.12",
    "fastmcp==3.4.0",
    "typer==0.16.0",
    "uvicorn==0.35.0",
    "faiss-cpu==1.13.2",
    "pandas==2.3.0",
    "markdownify==1.2.0",
    "pyyaml==6.0.3",
]


[tool.uv]
dev-dependencies = [
    "build==1.2.2.post1",
    "ruff==0.11.12",
]
# Security constraint for a transitive dependency (pulled in by browser-use).
# authlib <= 1.6.8 is vulnerable (CVE-2026-27962); force >= 1.6.9.
constraint-dependencies = [
    "authlib>=1.6.9",
]

[tool.codespell]
ignore-words-list = "bu"
skip = "*.json,*.yaml,*.yml"

[tool.ruff]
line-length = 130
fix = true

[tool.ruff.lint]
select = ["ASYNC", "E", "F", "FAST", "I", "PLE"]
ignore = ["ASYNC109", "E101", "E402", "E501", "F841", "E731"]  # TODO: determine if adding timeouts to all the unbounded async functions is needed / worth-it so we can un-ignore ASYNC109
unfixable = ["E101", "E402", "E501", "F841", "E731"]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true

[tool.pyright]
typeCheckingMode = "basic"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "workflow_use/**/*.py",
    "workflow_use/**/*.md",
]

[tool.hatch.metadata]
allow-direct-references = true
