[project]
name = "workflow-use"
version = "0.2.11"
authors = [{ name = "Gregor Zunic" }]
description = "Create, edit, run deterministic workflows"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved",
    "Operating System :: OS Independent",
]

dependencies = [
    "aiofiles==24.1.0",
    "browser-use==0.13.4",
    "fastapi==0.139.2",
    "fastmcp==3.4.0",
    # starlette is transitive (via fastapi/fastmcp) but pinned directly so the
    # security floor lands in the published wheel's Requires-Dist, not just the
    # uv lockfile. Clears CVE-2025-62727 (<= 0.49.0) / CVE-2026-48818 (< 1.1.0)
    # / CVE-2026-54283 (< 1.3.1); requires fastapi>=0.139 (no upper starlette cap).
    "starlette==1.3.1",
    "typer==0.16.0",
    "uvicorn==0.35.0",
    "faiss-cpu==1.13.2",
    "pandas==2.3.0",
    "markdownify==1.2.2",
    "pyyaml==6.0.3",
]


[tool.uv]
dev-dependencies = [
    "build==1.2.2.post1",
    "ruff==0.11.12",
]
# Security constraints for transitive dependencies (pulled in by browser-use
# and friends). Each floor lifts the resolved version out of a vulnerable range.
constraint-dependencies = [
    "authlib>=1.6.9",       # CVE-2026-27962 (<= 1.6.8)
    "urllib3>=2.7.0",       # CVE-2026-44431 / CVE-2025-66418 / CVE-2025-66471 / CVE-2026-21441
    "pyasn1>=0.6.3",        # CVE-2026-23490 / CVE-2026-30922 (<= 0.6.2)
    "protobuf>=6.33.5,<7",  # CVE-2026-0994 (<= 6.33.4); stay on the 6.x line
    "cryptography>=48.0.1", # CVE-2026-26007 / GHSA-537c-gmf6-5ccf (< 48.0.1)
    "pillow>=12.2.0",       # CVE-2026-40192 / CVE-2026-42311 / CVE-2026-25990 (< 12.2.0)
    "soupsieve>=2.8.4",     # CVE-2026-49476 / CVE-2026-49477 (<= 2.8.3)
]

[tool.codespell]
ignore-words-list = "bu"
skip = "*.json,*.yaml,*.yml"

[tool.ruff]
line-length = 130
fix = true

[tool.ruff.lint]
select = ["ASYNC", "E", "F", "FAST", "I", "PLE"]
ignore = ["ASYNC109", "E101", "E402", "E501", "F841", "E731"]  # TODO: determine if adding timeouts to all the unbounded async functions is needed / worth-it so we can un-ignore ASYNC109
unfixable = ["E101", "E402", "E501", "F841", "E731"]

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true

[tool.pyright]
typeCheckingMode = "basic"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "workflow_use/**/*.py",
    "workflow_use/**/*.md",
]

[tool.hatch.metadata]
allow-direct-references = true
